DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2004-11-04 patrickh    Changed the location of Tweek data files to $HOME/.tweek
                       on UNIX-based platforms.  Along with this,
                       $HOME/.tweekrc has been renamed to $HOME/.tweek/tweekrc.
                       Added a new user-specific directory to the default Bean
                       search path: <Tweek data dir>/beans.  This uses the
                       platform-specific data directory.
                       NEW VERSION: 0.19.0
2004-11-04 patrickh    Added EnvironmentService.getOS().
                       NEW VERSION: 0.18.2
2004-10-29 patrickh    Extended the Tweek Java GUI to integrate into Mac OS X.
2004-10-29 patrickh    Relocated the Tweek Java libraries to the directory
                       $TWEEK_BASE_DIR/share/tweek/java.  Changed the default
                       Bean search path to $TWEEK_BASE_DIR/share/tweek/beans.
                       NEW VERSION: 0.18.0
2004-09-11 patrickh    Updated for JDOM 1.0.
                       NEW VERSION: 0.17.1
2004-07-13 aronb       Inter-step communication in wizards now occurs using a
                       hash map.
                       NEW VERSION: 0.17.0
2004-05-08 patrickh    Updated to VPR 0.36.0.
                       NEW VERSION: 0.16.3
2004-04-10 patrickh    Added a new Swing look and feel called Liquid.
2004-04-05 patrickh    Changed the default omniORB version tested for by
                       configure to omniORB4.
2003-12-08 patrickh    Initial support for using Fnorb or PyORBit 2 as
                       alternatives to omniORBpy.  This work is not yet done.
2003-11-07 patrickh    The editor for the global preferences of the Java GUI
                       now saves the correct value for the user's preferred
                       starting directory for file choosers.
                       NEW VERSION: 0.16.2